--- a/package.json
+++ b/package.json
@@ -25,20 +25,22 @@
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
     "dotenv": "^6.2.0",
+    "email-templates": "^5.0.4",
     "express": "^4.16.4",
     "express-jwt": "^5.3.1",
     "jsonwebtoken": "^8.5.0",
     "mysql": "^2.16.0",
     "mysql2": "^1.6.5",
+    "nodemailer": "^5.1.1",
     "pug": "^2.0.3",
     "require": "^2.4.20",
     "sequelize": "^4.42.1",
     "serverless": "^1.32.0",
     "serverless-http": "^1.9.1",
     "shipit": "^1.2.0",
+    "uglify-js": ">=2.6.0",
     "uuid": "^3.3.2",
-    "winston": "^3.2.1",
-    "uglify-js": ">=2.6.0"
+    "winston": "^3.2.1"
   },
   "devDependencies": {
     "jest": "^24.1.0",
